# codice-fiscale-e-partita-iva

./: .env.example  .gcloudignore  .gitignore  AUTHENTICATION.md  CLAUDE.md  CLOUD_FUNCTION_DEPLOYMENT.md  CLOUD_RUN_SOLUTION.md  DEPLOYMENT_COMMAND_GUIDE.md  QUICK_AUTH_SETUP.md  README.md  debug_auth.py  deploy-cloudrun.sh  deploy.sh  function-config.yaml  main-cloudrun.py  main.py  pyproject.toml  requirements-cloudfunction.txt  requirements.txt  test-local.py
.github/workflows/: update-data.yml
codicefiscale/: __init__.py  __main_api__.py  app.py  auth.py  cloud_function_app.py  codicefiscale.py  data.py  partitaiva.py
codicefiscale/templates/: base.html  index.html
frontend/: .token  CLERK_TOKEN_GENERATOR.md  README.md  generate-token.js  package-lock.json  package.json  quick-start.js  requirements.txt  test-api.js  test-example.js
scripts/: generate_requirements.py  updatedata.py
src/codicefiscale/: __init__.py  __main_api__.py  api.py  partitaiva.py
tests/: test_api.py  test_auth.py  test_clerk_auth.py  test_clerk_integration.py  test_partitaiva.py
